--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     <section class="container">
         <img class="google-logo" src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" 
         alt="Google">
-        <input type="text" class="search-bar"><br>
+        <div class="search-container">
+            <img class="search-icon" src="search-solid.svg"></i>
+            <input type="text" class="search-bar"><br>
+        </div>
         <input type="submit" value="Buscar con Google">
         <input type="submit" value="Me siento con suerte">
         <p>Ofrecido por Google en 
